# taro-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  bot.py  main.py  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: a8f3c2d91e04_seed_tarot_cards_rider_waite.py  e5b6d493b126_initial_schema.py
backend/app/: main.py
backend/app/api/: README.md  access_control.py  api_router.py  router.py
backend/app/api/auth/: __init__.py  jwt_utils.py  telegram_validator.py
backend/app/api/routers/: README.md  README_RULES.md  __init__.py  auth.py  bot_internal.py  cards.py  health.py  index.py  reading_sessions.py  readings.py  spreads.py  users.py
backend/app/api/schemas/: README.md  __init__.py  auth.py  common_dto.py  (+5 more)
backend/app/core/: README.md  base.py  config.py  container.py  database.py  db_helper.py  exception_handlers.py  exceptions.py  redis_helper.py
backend/app/domain/: README.md  __init__.py  prompt_templates.py  spread_config.py  tarot_deck_seed.py
backend/app/infrastructure/: README.md  __init__.py  llm_client.py  reading_session_store.py
backend/app/models/: README.md  __init__.py  enums.py  reading.py  reading_card.py  tarot_card.py  user.py
backend/app/repositories/: README.md  README_RULES.md  __init__.py  base_repository.py  reading_repository.py  tarot_card_repository.py  user_repository.py
backend/scripts/: export_tarot_card_filenames.py  init_db.py  seed_test_card.sql
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: __init__.py  base.py
(+13 files in other folders)
